# electric-vehicle-population-analysis

./: .env.example  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: api.md  architecture.md
src/backend/: alembic.ini  modellingApi.py  requirements.txt
src/backend/app/: __init__.py  main.py
src/backend/app/api/: __init__.py  deps.py
src/backend/app/api/middleware/: auth.py
src/backend/app/api/routes/: data.py  models.py
src/backend/app/core/: config.py  database.py  security.py
src/backend/app/ml/models/: classification.py  clustering.py  models.py  regression.py  session.y
src/backend/app/ml/pipelines/: training.py
src/backend/app/ml/preprocessing/: data_cleaning.py
src/backend/app/utils/: helpers.py  logger.py  mlflow_client.py
src/docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
src/frontend/electric-vehicle-population-analysis/: Dockerfile  package-lock.json  package.json
src/frontend/electric-vehicle-population-analysis/src/: App.tsx  index.tsx
src/frontend/electric-vehicle-population-analysis/src/pages/: Dashboard.tsx  ModelTraining.tsx  Prediction.tsx
src/frontend/electric-vehicle-population-analysis/src/services/: api.ts
src/infrastructure/kubernetes/: deployment.yaml
src/models/modelUtiliity/: modelUtility.py
src/models/notebook/: electric-vehicle-population-analysis.ipynb
src/monitoring/: prometheus.yml
src/monitoring/grafana/dashboard/: ml-metrics.json
src/notebooks/: ev_analysis.ipynb  feature_engineering.ipynb  model_experiments.ipynb
src/scripts/: process_data.py  setup.sh
src/tests/integration/: test_api.y
src/tests/unit/: test_models.py
